# OmniStateStore

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.en.md  README.md  pom.xml
conf/: flink-conf.yaml
cpp/: CMakeLists.txt
cpp/include/: FalconCache.h  FalconExceptionJni.h  FalconMap.h  FalconRocksDBHelper.h  FalconUtilJni.h
cpp/jni_headers/: com_huawei_falcon_state_cache_FalconValueState.h
cpp/src/cache/: FalconCache.cpp  FalconRocksDBHelper.cpp  FalconValueStateJNI.cpp
docs/en/: installation_guide.md  release_notes.md
docs/zh/: best_practices.md  design_guide.md  faq.md  installation_guide.md  menu_feature_guide.md  quick_start.md  release_notes.md  user_guide.md
java/: pom.xml
scripts/: Makefile.patch  build.sh
src/core/: CMakeLists.txt
src/core/binary/: binary_reader.h  fresh_binary.h  key_value.h  lsm_binary.h  query_binary.h  slice_binary.h
src/core/blob_store/: CMakeLists.txt  blob_Immutable_file_iterator.h  blob_cleaner.cpp  blob_cleaner.h  blob_compaction_file_writer.h  blob_data_block.cpp  blob_data_block.h  blob_data_block_meta.h  blob_data_block_writer.cpp  blob_data_block_writer.h  blob_file_group.cpp  blob_file_group.h  blob_file_group_iterator.h  blob_file_group_manager.cpp  blob_file_group_manager.h  blob_file_manager.cpp  blob_file_manager.h  blob_file_merging_iterator.h  blob_file_meta.h  blob_file_meta_base.h  blob_file_meta_iterator.h  blob_file_reader.cpp  blob_file_reader.h  blob_file_writer.cpp  blob_file_writer.h  blob_immutable_file.cpp  blob_immutable_file.h  blob_index_block.cpp  blob_index_block.h  blob_index_block_writer.cpp  blob_index_block_writer.h  blob_store.cpp  blob_store.h  blob_store_stat.h  blob_structure.h  blob_write_buffer.cpp  blob_write_buffer.h  flush_blob_data_block_runable.h
src/core/common/: CMakeLists.txt  block.h  bss_def.h  bss_log.cpp  bss_log.h  bss_metric.h  concurrent_deque.h  config.cpp  hash.h  jvm_instance.cpp  jvm_instance.h  path.h  path_transform.h  scope_guard.h  state_id_interval.h
src/core/compress/: CMakeLists.txt  compress_algo.cpp  compressor.h  compressor_utils.cpp  compressor_utils.h  lz4_interface.cpp  lz4_interface.h
src/core/db/: CMakeLists.txt  boost_state_db_impl.cpp  boost_state_db_impl.h  (+3 more)
src/core/jni/: CMakeLists.txt  com_huawei_ock_bss_common_BoostStateDB.cpp  com_huawei_ock_bss_common_BoostStateDB.h  com_huawei_ock_bss_common_Checkpoint.cpp  com_huawei_ock_bss_common_Checkpoint.h  com_huawei_ock_bss_common_memory_DirectBuffer.cpp  com_huawei_ock_bss_common_memory_DirectBuffer.h  com_huawei_ock_bss_jni_AbstractNativeHandleReference.cpp  com_huawei_ock_bss_jni_AbstractNativeHandleReference.h  com_huawei_ock_bss_metric_BoostNativeMetricImpl.cpp  com_huawei_ock_bss_metric_BoostNativeMetricImpl.h  com_huawei_ock_bss_ockdb_util_OckDBLog.cpp  com_huawei_ock_bss_ockdb_util_OckDBLog.h  com_huawei_ock_bss_snapshot_SavepointDBResult.cpp  com_huawei_ock_bss_snapshot_SavepointDBResult.h  com_huawei_ock_bss_table_AbstractKMapTable.cpp  com_huawei_ock_bss_table_AbstractKMapTable.h  com_huawei_ock_bss_table_AbstractTable.cpp  com_huawei_ock_bss_table_AbstractTable.h  com_huawei_ock_bss_table_BoostPQTable.cpp  com_huawei_ock_bss_table_BoostPQTable.h  com_huawei_ock_bss_table_KListTableImpl.cpp  com_huawei_ock_bss_table_KListTableImpl.h  com_huawei_ock_bss_table_KMapTableImpl.cpp  com_huawei_ock_bss_table_KMapTableImpl.h  com_huawei_ock_bss_table_KVTableImpl.cpp  com_huawei_ock_bss_table_KVTableImpl.h  com_huawei_ock_bss_table_iterator_PQKeyIterator.cpp  com_huawei_ock_bss_table_iterator_PQKeyIterator.h  com_huawei_ock_bss_table_iterator_SubTableEntryIterator.cpp  com_huawei_ock_bss_table_iterator_SubTableEntryIterator.h  com_huawei_ock_bss_table_iterator_SubTableFullEntryIterator.cpp  com_huawei_ock_bss_table_iterator_SubTableFullEntryIterator.h  com_huawei_ock_bss_table_iterator_SubTableKeyIterator.cpp  com_huawei_ock_bss_table_iterator_SubTableKeyIterator.h  com_huawei_ock_bss_table_iterator_TableEntryIterator.cpp  com_huawei_ock_bss_table_iterator_TableEntryIterator.h  com_huawei_ock_bss_table_iterator_TableKeyIterator.cpp  com_huawei_ock_bss_table_iterator_TableKeyIterator.h  com_huawei_ock_bss_table_iterator_TableListEntryIterator.cpp  (+4 more)
src/plugin/: CMakeLists.txt  assembly.xml  pom.xml
test/: CMakeLists.txt  run_dt.sh
test/conf/: comp.cmake  config.yaml
test/dt_fuzz/: CMakeLists.txt  fuzz_main.cpp  fuzz_main.h
test/dt_fuzz/testcase/: test_table.cpp  test_table.h  test_utils.h
test/llt/: CMakeLists.txt  ut_main.cpp  ut_main.h
test/llt/testcase/: test_utils.h
test/llt/testcase/binary/: test_fresh_binary.cpp  test_key.cpp  test_value.cpp
test/llt/testcase/common/: test_bss_log.cpp  test_bss_log.h  test_check_path.cpp  test_check_path.h  test_file_system.cpp  test_file_system.h
test/llt/testcase/common/io/: test_file_output_view.cpp
test/llt/testcase/db/: test_db.cpp  test_savepoint.cpp
test/llt/testcase/executor/: test_executor.cpp  test_executor.h
test/llt/testcase/fresh_table/: test_boost_hashmap.cpp  test_boost_hashmap.h  test_fresh_table.cpp  test_fresh_table.h  test_memory_segment.cpp  test_memory_segment.h  test_skiplist.cpp  test_skiplist.h
test/llt/testcase/lsm_store/: test_file.cpp  test_file.h  test_file_manager.cpp  test_file_manager.h  test_flush_table.cpp  test_flush_table.h  test_lsm_store.h  test_lsm_store_br_cov.cpp  test_lsm_store_br_cov.h
test/llt/testcase/memory/: test_mem_manager.cpp  test_mem_manager.h
test/llt/testcase/slice_table/: test_bucket_group.cpp  test_bucket_group.h  test_flushing_bucket_group.cpp  test_flushing_bucket_group.h  test_slice.cpp  test_slice.h  test_slice_compaction.cpp  test_slice_compaction.h  test_slice_table.cpp  test_slice_table.h  test_slice_table_br_cov.cpp  test_slice_table_br_cov.h  test_slice_table_iterator.cpp  test_slice_table_iterator.h  test_slice_table_manager.cpp  test_slice_table_manager.h
test/llt/testcase/snapshot/: test_fresh_slice_table_snapshot.cpp  test_fresh_slice_table_snapshot.h
test/llt/testcase/test_module/: test_example.cpp
test/llt/testcase/util/: generator.h
(+555 files in other folders)
